--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
 .example-container {
-    width: 99%;
-    height: 98%;
-    margin: 10px;
-    border: 1px solid #555;
+    padding-top: 60px;
+    width: 100%;
+    height: 90%;
   }
+
+.main-content{
+    margin-left: 50px;
+}
