--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<p>sidebar works!</p>
+<mat-list role="list">
+    <mat-list-item role="listitem">
+        <a href="create">Add User</a>
+    </mat-list-item>
+    <mat-list-item role="listitem">
+        <a href="list">List User</a>
+    </mat-list-item>
+  </mat-list>
