List and view user completed

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <mat-list role="list">
     <mat-list-item role="listitem">
-        <a href="create">Add User</a>
+        <a href="users/create">Add User</a>
     </mat-list-item>
     <mat-list-item role="listitem">
-        <a href="list">List User</a>
+        <a href="users/list">List User</a>
     </mat-list-item>
-  </mat-list>
+</mat-list>
