--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .example-container {
     padding-top: 60px;
     width: 100%;
-    height: 90%;
+    min-height: 500px;
   }
 
 .main-content{
-    margin-left: 50px;
+    margin-left: 100px;
 }
