--- a/src/app/users/list-users/list-users.component.html
+++ b/src/app/users/list-users/list-users.component.html
@@ -1,8 +1,15 @@
-
+<h1 *ngIf="listUsers">Displaying {{listUsers.length}} users</h1>
 <div class="main-content">
-    <mat-list role="list">
-        <mat-list-item role="listitem" *ngFor="let user of listUsers">
-            {{user.name}}
-        </mat-list-item>
-    </mat-list>
+    <mat-card class="list-users" role="listitem" *ngFor="let user of listUsers">
+        <mat-card-title>{{user.name}}</mat-card-title>
+        <mat-card-content>
+            {{user.email}}
+        </mat-card-content>
+        <mat-card-actions>
+            <a class="action-link" [routerLink]="['/users/view', user.id]">View</a> |
+            <a class="action-link" [routerLink]="['/users/edit', user.id]">Edit</a> |
+            <a class="action-link" [routerLink]="['/users/delete', user.id]">Delete</a>
+        </mat-card-actions>
+
+    </mat-card>
 </div>
