--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -1,1 +1,33 @@
-<p>add-user works!</p>
+<mat-card>
+    <mat-card-title>Create New User</mat-card-title>
+    <mat-card-content>
+        <form [formGroup]="addUserForm" (submit)="createUser()">
+            <p>
+                <mat-form-field appearance="outline">
+                    <mat-label>User Name</mat-label>
+                    <input matInput placeholder="User Name" formControlName="username">
+                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder="Email" formControlName="email">
+                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field appearance="outline">
+                    <mat-label>Phone</mat-label>
+                    <input matInput placeholder="Phone" formControlName="phone">
+                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                </mat-form-field>
+            </p>
+            <p>
+                <button mat-raised-button color="primary">Create User</button>
+            </p>
+        </form>
+    </mat-card-content>
+</mat-card>
