--- a/src/app/users/list-users/list-users.component.scss
+++ b/src/app/users/list-users/list-users.component.scss
@@ -1,11 +1,15 @@
-.username{
-    min-width: 300px;
+.username {
+  min-width: 300px;
 }
 
-.action-link{
-    padding: 10px;
+.action-link {
+  padding: 10px;
 }
 
-.list-users{
-    margin: 10px;
+.list-users {
+  margin: 10px;
+}
+
+table {
+  width: 98%;
 }
