--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,11 @@
 .example-container {
-    padding-top: 60px;
-    width: 100%;
-    min-height: 500px;
-  }
+  padding-top: 60px;
+  width: 100%;
+  min-height: 500px;
+}
 
-.main-content{
-    margin-left: 100px;
+.main-content {
+  margin-left: 100px;
+  padding-left: 20px;
+  min-height: 700px;
 }
