Lazy loading and pipe implementation

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -5,4 +5,7 @@
     <mat-list-item role="listitem">
         <a href="users/list">List User</a>
     </mat-list-item>
+    <mat-list-item role="listitem">
+        <a href="/roles">List User</a>
+    </mat-list-item>
 </mat-list>
